Fix heading pseudo element overflow issue for Firefox based on production at https://statamic.dev/tags/form-create#pre-rendered-field-html

--- a/public/css/base/elements/elements.css
+++ b/public/css/base/elements/elements.css
@@ -435,6 +435,7 @@
         --border-width: 0.3px;
     }
     .markdown h2:not(header + h2), article > h2:not(header + h2, hr + h2) {
+        position: relative;
         --distance: var(--spacing-l-1);
         margin-block-start: var(--distance);
         p:has(+ &) {
